"CUDA error" appears only momentarily, then disappears #42747

Closed
opened 2014-11-28 05:29:32 +01:00 by Andrew Price · 8 comments

System Information
Windows 7 64-bit, GTX 970

Blender Version
Broken: 2.72
Worked: unknown

Short description of error
(old bug) The "CUDA error" message appears only momentarily before disappearing.

Exact steps for others to reproduce the error
Render something on the GPU that's so complex it surpasses the memory load of the card. The top bar should briefly flash this error:
Untitled-2.png
Which is very helpful to know for diagnosing. But within a second it will disappear to show this:
Untitled-3.png
Which for the user is frustrating, because unless you were watching it as it happened you wouldn't have seen the error.

This is a really old bug, so I'm sure everyone already knows.
I asked about it at the 2013 bconf (during the UI discussion) and was told it was a bug that I should report.

Thanks!

**System Information** Windows 7 64-bit, GTX 970 **Blender Version** Broken: 2.72 Worked: unknown **Short description of error** (old bug) The "CUDA error" message appears only momentarily before disappearing. **Exact steps for others to reproduce the error** Render something on the GPU that's so complex it surpasses the memory load of the card. The top bar should briefly flash this error: ![Untitled-2.png](https://archive.blender.org/developer/F127475/Untitled-2.png) Which is very helpful to know for diagnosing. But within a second it will disappear to show this: ![Untitled-3.png](https://archive.blender.org/developer/F127477/Untitled-3.png) Which for the user is frustrating, because unless you were watching it as it happened you wouldn't have seen the error. This is a really old bug, so I'm sure everyone already knows. I asked about it at the 2013 bconf (during the UI discussion) and was told it was a bug that I should report. Thanks!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice
Sergey Sharybin was assigned by Bastien Montagne 2014-11-28 09:09:03 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Sergey, think this one is for you? Though maybe message is also spit to the console…

Sergey, think this one is for you? Though maybe message is also spit to the console…

This issue was referenced by 2b4eeb79cd

This issue was referenced by 2b4eeb79cd77bebdb98c769b56dbe0a87e034e1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2b4eeb79cd.

Closed by commit 2b4eeb79cd.

This issue was referenced by blender/cycles@8b756579ca

This issue was referenced by blender/cycles@8b756579ca75cfab71f59cf1655ba236c3cfd2b1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42747
No description provided.